--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^2.1.3",
+    "uid": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
